--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo"
+	“start:prod”: “node dist/src/main”
   },
   "author": "",
   "license": "ISC",
