--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo"
+    "test": "echo",
 	“start:prod”: “node dist/src/main”
   },
   "author": "",
