--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo",
-	"start:prod": "node dist/src/main"
+    "test": "echo"
   },
   "author": "",
   "license": "ISC",
